[package]
name = "prime-finder"
version = "0.2.0"
authors = ["Calle Svensson <calle.svensson@zeta-two.com>"]
edition = "2018"

[dependencies]
clap = "3.1.18"
itertools = "0.10.3"
log = "0.4.17"
rayon = "1.5.3"
simplelog = "0.12.0"
aho-corasick = "0.7.18"
cdc = "0.1.1"

[dependencies.rug]
version = "1.16.0"
default-features = false
features = ["integer"]

[dependencies.indicatif]
version = "0.16.2"
features = ["rayon"]

# CARGO_PROFILE_RELEASE_DEBUG=true
#[profile.release]
#debug = true
